// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly for multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totaling 
    $1,095.00
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly for no expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     
    expenses
     totaling 
    $0.00
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly for one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $45.00
  </p>
</div>
`;
